[gd_scene load_steps=6 format=3 uid="uid://edhbtx5sla6w"]

[ext_resource type="Script" uid="uid://2hyh4tnn1r5l" path="res://scripts/settings_window.gd" id="1_wkylp"]
[ext_resource type="PackedScene" uid="uid://cuvx8mq52xkhh" path="res://scenes/text_editor_settings.tscn" id="2_lglug"]
[ext_resource type="PackedScene" uid="uid://k6ifqabl5f46" path="res://scenes/notes_panel_settings.tscn" id="4_7ar1m"]
[ext_resource type="PackedScene" uid="uid://bjat3thnxa3gk" path="res://scenes/app_theme_settings.tscn" id="4_r8oha"]
[ext_resource type="PackedScene" uid="uid://dk03yrdgtmjhm" path="res://scenes/about.tscn" id="5_8skb0"]

[node name="SettingsWindow" type="Window"]
initial_position = 4
size = Vector2i(500, 450)
unresizable = true
script = ExtResource("1_wkylp")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="Text Editor" parent="Panel/TabContainer" instance=ExtResource("2_lglug")]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
metadata/_tab_index = 0

[node name="Notes" parent="Panel/TabContainer" instance=ExtResource("4_7ar1m")]
visible = false
custom_minimum_size = Vector2(0, 265)
layout_mode = 2
metadata/_tab_index = 1

[node name="Theme" parent="Panel/TabContainer" instance=ExtResource("4_r8oha")]
visible = false
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
metadata/_tab_index = 2

[node name="About" parent="Panel/TabContainer" instance=ExtResource("5_8skb0")]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Exit" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -39.0
offset_right = 30.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Close"

[connection signal="tab_changed" from="Panel/TabContainer" to="." method="_on_tab_container_tab_changed"]
[connection signal="pressed" from="Panel/Exit" to="." method="_on_exit_pressed"]
